--- a/env/movies.env
+++ b/env/movies.env
@@ -10,7 +10,7 @@ MONGODB_PASSWORD=password
 JWT_SECRET=secret
 
 # Set your OMDb API key obtained from https://www.omdbapi.com/
-OMDB_API_KEY=yourOmdbApiKey
+OMDB_API_KEY=72528ece
 
 # Set limit of saved movies per month for basic user
 MOVIES_PER_MONTH_BASIC=5
