--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,5 +24,5 @@ jobs:
       run: |
         echo --- Running test cases ---
         cd Netguru
-        MOVIES_MODE=test docker-compose up --build --exit-code-from movies-service --abort-on-container-exit
+        MOVIES_MODE=test docker-compose up --build --exit-code-from movies --abort-on-container-exit
         echo --- Completed test cases ---
